--- a/Operatyng_System_CSharp_2017/Bios_and_Loader/Bios_and_Loader/Bios_and_Loader.csproj
+++ b/Operatyng_System_CSharp_2017/Bios_and_Loader/Bios_and_Loader/Bios_and_Loader.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{BABFC427-ED15-4DE4-956A-CCF2F51EE514}</ProjectGuid>
+    <ProjectGuid>{71C917AA-44CE-483C-88DE-569491C9FB7D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Bois_and_Boot_Loader</RootNamespace>
-    <AssemblyName>Bois_and_Boot_Loader</AssemblyName>
+    <RootNamespace>Bios_and_Loader</RootNamespace>
+    <AssemblyName>Bios_and_Loader</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -39,8 +39,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
     <Compile Include="Loader.cs" />
+    <Compile Include="Loaderr.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
