--- a/Operatyng_System_CSharp_2017/Operating_System_Kernel/Operating_System_Kernel/Operating_System_Kernel.csproj
+++ b/Operatyng_System_CSharp_2017/Operating_System_Kernel/Operating_System_Kernel/Operating_System_Kernel.csproj
@@ -41,8 +41,10 @@
   <ItemGroup>
     <Compile Include="Array_Of_I_Nodes.cs" />
     <Compile Include="Catalog.cs" />
+    <Compile Include="File_Attributes.cs" />
     <Compile Include="Information_Of_Free_Blocks.cs" />
     <Compile Include="I_Node.cs" />
+    <Compile Include="I_Node__.cs" />
     <Compile Include="Memory_Manager.cs" />
     <Compile Include="Inter_Process_Comunication.cs" />
     <Compile Include="Process_Manager.cs" />
