--- a/Operatyng_System_CSharp_2017/Bios_and_Loader/Bios_and_Loader/Bios_and_Loader.csproj
+++ b/Operatyng_System_CSharp_2017/Bios_and_Loader/Bios_and_Loader/Bios_and_Loader.csproj
@@ -40,7 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Loader.cs" />
-    <Compile Include="Loaderr.cs" />
+    <Compile Include="Bios.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
